force-app/main/default/objects/Competitor_Pricing__c/Competitor_Pricing__c.object-meta.xml
<CustomObject>
    <label>Competitor Pricing</label>
    <nameField>
        <displayFormat>COM_PRICE-{0000}</displayFormat>
        <label>Competitor Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors Pricing</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>