force-app/main/default/objects/Competitor_Pricing__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitors Pricing</relationshipLabel>
    <relationshipName>Competitors_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>