force-app/main/default/objects/Competitor_Pricing__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When created from Opportunity Product, value automatically populated after save. No action needed.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitors Pricing</relationshipLabel>
    <relationshipName>Competitors_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>