force-app/main/default/objects/Competitor_Pricing__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Competitors Pricing</relationshipLabel>
    <relationshipName>Competitors_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>