force-app/main/default/objects/Competitor_Pricing__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>Opportunity_Product__r.PricebookEntry.Product2.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>