force-app/main/default/objects/Competitor_Pricing__c/fields/Product_REF__c.field-meta.xml
<CustomField>
    <fullName>Product_REF__c</fullName>
    <label>Competitor Product REF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>